# AgenticReporting

./: .env.example  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/database/: session.py
app/models/: __init__.py  report.py
app/routers/: health.py
app/services/: health_service.py
