[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-reporting-api"
version = "0.1.0"
description = "Backend API for AI conversational financial reporting and data visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
